--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-              <h4>Arcido Perin-PSD</h4>
+              <a href="/assets/pages/infoPresidentes/1.html"> <h4>Arcido Perin-PSD</h4></a>
+              
               <span>1955-1959</span>
             </div>
           </div><!-- End Team Member -->
@@ -206,7 +207,8 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-              <h4>Fioravante Bonamigo-PSD</h4>
+              <a href="/assets/pages/infoPresidentes/1.html"> <h4>Fioravante Bonamigo-PSD</h4></a>
+             
               <span>1957-1959</span>
           </div><!-- End Team Member -->
         </div>
